...
      this.props.navigation.navigate('FixRequestScheduleStep');
    }

    render() : JSX.Element {
      return (
        <>
          <FixRequestHeader showBackBtn={true} navigation={this.props.navigation} screenTitle="Create a Fixit Template and your Fixit Request" textHeight={60}/>
          <StyledPageWrapper>
            <StepIndicator
              numberSteps={this.props.numberOfSteps}
              currentStep={3 + this.props.fixStepsDynamicRoutes.length} />
            <StyledScrollView>
              <StyledContentWrapper>
...
                <Spacer height="40px" />
                <H2 style={{
                  fontWeight: 'bold',
                  marginBottom: -15,
                }}>Location</H2>
                <Divider />
                <H3 style={{ fontWeight: 'normal' }}>Address</H3>
                <Spacer height="5px" />
                <FormTextInput
                  onChange={
                    (text : string) => store.dispatch(fixRequestActions.setFixAddress(text))
                  }
                  value={this.props.fixAddress} />
                <Spacer height="20px" />
                <H3 style={{ fontWeight: 'normal' }}>City</H3>
                <Spacer height="5px" />
                <FormTextInput
                  onChange={
                    (text : string) => store.dispatch(fixRequestActions.setFixCity(text))
                  }
                  value={this.props.fixCity} />
...
                  flexDirection: 'row',
                }}>
                  <View style={{
                    flexGrow: 1,
                    marginRight: 10,
                  }}>
                    <H3 style={{ fontWeight: 'normal' }}>Province</H3>
                    <Spacer height="5px" />
                    <FormTextInput
                      onChange={
                        (text : string) => store.dispatch(fixRequestActions.setFixProvince(text))
                      }
                      value={this.props.fixProvince} />
                  </View>
                  <View style={{
                    flexGrow: 1,
                    marginLeft: 10,
                  }}>
                    <H3 style={{ fontWeight: 'normal' }}>Postal code</H3>
                    <Spacer height="5px" />
                    <FormTextInput
                      onChange={
                        (text : string) => store.dispatch(fixRequestActions.setFixPostalCode(text))
                      }
                      value={this.props.fixPostalCode} />
...
