...
      ));
      this.props.navigation.navigate('FixRequestSectionsStep');
    }

    generateNextPageOptions = () : {label:string, onClick: () => void}[] => {
      const nextPageOptionsObj = [{
        label: (this.props.fixTemplateId) ? 'Update Fixit Template & Continue' : 'Save Fixit Template & Continue',
        onClick: this.handleContinue,
      }];
      if (this.props.fixTemplateId
      && this.props.fixRequestObj.Details[0].Sections.length > 0
      && !this.props.fixStepsDynamicRoutes[0]) {
        return [
...
                name: 'FixRequestSectionsStep',
                key: this.props.fixStepsDynamicRoutes[0].key,
              });
            },
          },
        ];
      } return [...nextPageOptionsObj, { label: 'Add New Section', onClick: this.handleAddSection }];
    }

    render() : JSX.Element {
      return (
        <>
          <FixRequestHeader showBackBtn={true} navigation={this.props.navigation} screenTitle="Create a Fixit Template and your Fixit Request" textHeight={60}/>
...
              currentStep={2} />
            <StyledScrollView>
              <StyledContentWrapper>
                <P>This section will be part of your new Fixit Template.
                You can fill the the fields with your requirement.</P>
                <Spacer height="20px" />
                <H2 style={{ fontWeight: 'bold' }}>Fix Description</H2>
                <Spacer height="5px" />
                <FormTextInput big
                  onChange={
                    (text : string) => store.dispatch(fixRequestActions.setFixDescription(text))
                  }
                  value={this.props.fixRequestObj.Details[0].Description} />
...
